<resources>
    <string name="app_name">Cubing Room</string>
    <string name="icon_image_description">Логотип приложения</string>
    <string name="logo_image_description">Логотип приложения с надписью</string>
    <string name="settings_button_image_description">Настройки приложения</string>
    <string name="return_to_main_window_button_image_description">Выход в главное меню</string>
    <string name="solving_window_title">Сборка</string>
    <string name="scramble_window_title">Скрамбл</string>
    <string name="entertainments_window_title">Развлечения</string>
    <string name="settings_window_title">Настройки</string>
    <string name="choosing_solving_method_label_text">Метод сборки:</string>
    <string name="setting_the_speed_of_motors_label_text">Скорость вращения моторов:</string>
    <string name="start_solving_button_text">Собрать</string>
    <string name="start_scramble_button_text">Разобрать</string>
    <string name="open_solving_history_button_text">История сборок</string>
    <string name="scramble_1_hint">Скрамбл 1</string>
    <string name="scramble_2_hint">Скрамбл 2</string>
    <string name="scramble_3_hint">Скрамбл 3</string>
    <string name="scramble_4_hint">Скрамбл 4</string>
    <string name="scramble_5_hint">Скрамбл 5</string>
    <string name="generate_scrambles_button_text">Сгенерировать скрамблы</string>
    <string name="patterns_window_title">Узоры</string>
    <string name="timer_window_title">Таймер</string>
    <string name="battle_window_title">Гонка</string>
    <string name="pictures_window_title">Картины</string>
    <string name="training_window_title">Обучение</string>
    <string name="controller_window_title">Пульт</string>
    <string name="robot_settings_block_title">Робот</string>

</resources>