<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pattern">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="100"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal"
            android:gravity="center_vertical|start"
            android:layout_marginEnd="5dp">

            <ImageButton
                android:id="@+id/return_to_main_window_button"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="fitCenter"
                android:contentDescription="@string/return_to_main_window_button_image_description"
                app:srcCompat="@drawable/twotone_arrow_back_24" />

        </LinearLayout>

        <TextView
            android:id="@+id/windowName"
            style="@style/WindowTitleText"
            android:layout_weight="10"
            android:text="@string/scramble_window_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="47"
            android:orientation="vertical">

            <com.example.cubing_room.RadioEdit
                android:id="@+id/scramble_1_radio_edit"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <com.example.cubing_room.RadioEdit
                android:id="@+id/scramble_2_radio_edit"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <com.example.cubing_room.RadioEdit
                android:id="@+id/scramble_3_radio_edit"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <com.example.cubing_room.RadioEdit
                android:id="@+id/scramble_4_radio_edit"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <com.example.cubing_room.RadioEdit
                android:id="@+id/scramble_5_radio_edit"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <TextView
            android:id="@+id/setting_the_speed_of_motors_label"
            style="@style/basicText"
            android:layout_weight="8"
            android:text="@string/setting_the_speed_of_motors_label_text" />


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="0dp"
            android:layout_weight="7">

            <SeekBar
                android:id="@+id/setting_speed_of_motors_seek_bar"
                android:layout_width="0dp"
                android:layout_weight="8"
                android:layout_height="wrap_content"
                android:min="1"
                android:max="100"
                android:progress="90"
                android:progressTint="@color/blue"
                android:progressBackgroundTint="@color/black"/>

            <TextView
                android:id="@+id/motors_speed_label"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:text=""/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_scramble_button"
            style="@style/MainButtonStyle"
            android:layout_weight="10"
            android:text="@string/start_scramble_button_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/generate_scrambles_button"
            style="@style/MainButtonStyle"
            android:layout_weight="8"
            android:text="@string/generate_scrambles_button_text" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>